chore(TRE-123): Add workflow_dispatch to run_trello_script
Added workflow_dispatch to run_trello_script.yml to allow manual triggering of the script.

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # This will run at 01:00 UTC every Monday
     - cron: '0 1 * * MON'
+  workflow_dispatch: # This allows manual triggering
 
 jobs:
   run_script:
