--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -24,8 +24,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests
 
+    - name: Setup Base URL for Images
+      run: |
+        # Construct the base raw URL based on the repository structure
+        RAW_URL_BASE="https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/main/"
+        echo "RAW_URL_BASE=$RAW_URL_BASE" >> $GITHUB_ENV
+
     - name: Run Trello script
       run: python leetcode_trello_manager.py
       env:
         API_KEY: ${{ secrets.API_KEY }}
         OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
+        RAW_URL_BASE: ${{ env.RAW_URL_BASE }}
