chore: add Trello script and Leetcode JSON files
Add Trello script and Leetcode JSON files to the project, update settings.ini, and update .github/workflows/run_trello_script.yml.

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -36,3 +36,5 @@ jobs:
         API_KEY: ${{ secrets.API_KEY }}
         OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
         RAW_URL_BASE: ${{ env.RAW_URL_BASE }}
+        TOPICS_JSON_PATH: 'leetcode75.json'  # add this line
+      
