chore(config): move config files and add run_trello_script workflow
Moved config files to config directory and added run_trello_script workflow to .github/workflows directory. Added leetcode75.json, settings.ini, main.

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -31,10 +31,9 @@ jobs:
         echo "RAW_URL_BASE=$RAW_URL_BASE" >> $GITHUB_ENV
 
     - name: Run Trello script
-      run: python leetcode_trello_manager.py
+      run: python src/main.py
       env:
         API_KEY: ${{ secrets.API_KEY }}
         OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
         RAW_URL_BASE: ${{ env.RAW_URL_BASE }}
-        TOPICS_JSON_PATH: 'leetcode75.json'  # add this line
-      
+        TOPICS_JSON_PATH: 'config/topics.json' 
