feat(run_trello_script): update topics json path
Updated the topics json path in the run_trello_script workflow and main.py to use leetcode75.json instead of topics.json.

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -36,4 +36,4 @@ jobs:
         API_KEY: ${{ secrets.API_KEY }}
         OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
         RAW_URL_BASE: ${{ env.RAW_URL_BASE }}
-        TOPICS_JSON_PATH: './config/topics.json' 
+        TOPICS_JSON_PATH: './config/leetcode75.json' 
