feat: Update config, main, board_operations, config_loader, and utilities files

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -14,3 +14,5 @@ WORKDAYS = 5
 [LABELS]
 DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:blue, Do not know:red, Know:green
 
+[PROBLEMS]
+PROBLEMS_PER_DAY = 1
