--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,6 +1,6 @@
 [TRELLO]
 BASE_URL = https://api.trello.com/1
-BOARD_NAME = LeetCode Challenges
+BOARD_NAME = LeetCode 75 Challenge
 
 [LISTS]
 DEFAULTS = To Do, Doing, Done
