feat(run_trello_script): add push trigger
Added a push trigger to the run_trello_script workflow to allow manual triggering.

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -5,6 +5,7 @@ on:
     # This will run at 01:00 UTC every Monday
     - cron: '0 1 * * MON'
   workflow_dispatch: # This allows manual triggering
+  push:
 
 jobs:
   run_script:
