feat: Add comment template to Trello cards
This commit introduces a new feature where a comment template is added to each Trello card. The template is loaded from a markdown file and added as a comment to the card when it is created. The path to the markdown file is specified in the settings.ini file. The run_trello_script.yml workflow

--- a/.github/workflows/run_trello_script.yml
+++ b/.github/workflows/run_trello_script.yml
@@ -5,6 +5,7 @@ on:
     # This will run at 01:00 UTC every Monday
     - cron: '0 1 * * MON'
   workflow_dispatch: # This allows manual triggering
+  push:
 
 jobs:
   run_script:
@@ -37,3 +38,4 @@ jobs:
         OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
         RAW_URL_BASE: ${{ env.RAW_URL_BASE }}
         TOPICS_JSON_PATH: './config/leetcode75.json' 
+        COMMENT_MD_PATH: './config/comment.md'
