--- a/config/settings.ini
+++ b/config/settings.ini
@@ -16,3 +16,6 @@ DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:blue, Do not know:red,
 
 [PROBLEMS]
 PROBLEMS_PER_DAY = 1
+
+[FILES]
+COMMENT_MD_PATH = ./path_to_your_md_file.md
