feat: Update Trello board name in settings
This commit changes the board name in the Trello settings from 'LeetCode 75 Challenge' to 'LeetCode 75 Challenge - Testing'. This change is necessary for testing purposes.

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,6 +1,6 @@
 [TRELLO]
 BASE_URL = https://api.trello.com/1
-BOARD_NAME = LeetCode 75 Challenge
+BOARD_NAME = LeetCode 75 Challenge - Testing
 
 [LISTS]
 DEFAULTS = To Do, Doing, Done
