--- a/config/settings.ini
+++ b/config/settings.ini
@@ -18,4 +18,4 @@ DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:blue, Do not know:red,
 PROBLEMS_PER_DAY = 1
 
 [FILES]
-COMMENT_MD_PATH = ./path_to_your_md_file.md
+COMMENT_MD_PATH = comment.md
