fix: update path in settings.ini
This commit updates the COMMENT_MD_PATH in the settings.ini file. The previous relative path was incorrect and has been changed to the correct path, './config/comment.md'. This ensures the application can correctly locate the comment.md file.

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -18,4 +18,4 @@ DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:blue, Do not know:red,
 PROBLEMS_PER_DAY = 1
 
 [FILES]
-COMMENT_MD_PATH = comment.md
+COMMENT_MD_PATH = ./config/comment.md
