--- a/config/settings.ini
+++ b/config/settings.ini
@@ -12,7 +12,7 @@ END_DAY = 4
 WORKDAYS = 5
 
 [LABELS]
-DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:blue, Do not know:red, Know:green
+DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:bold blue, Do not know:bold red, Know:bold green
 
 [PROBLEMS]
 PROBLEMS_PER_DAY = 1
