feat: Update color labels in settings.ini
This commit modifies the DEFAULT_COLORS section in the settings.ini file. The color for 'Somewhat know' label has been changed from 'bold blue' to 'bold_blue'. This change ensures consistency in the color naming convention across the

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -12,7 +12,7 @@ END_DAY = 4
 WORKDAYS = 5
 
 [LABELS]
-DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:bold blue, Do not know:bold red, Know:bold green
+DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:bold_blue, Do not know:bold_red, Know:bold_green
 
 [PROBLEMS]
 PROBLEMS_PER_DAY = 1
