--- a/config/settings.ini
+++ b/config/settings.ini
@@ -12,7 +12,7 @@ END_DAY = 4
 WORKDAYS = 5
 
 [LABELS]
-DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:bold_blue, Do not know:bold_red, Know:bold_green
+DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:orange_light, Do not know:red_light, Know:green_light
 
 [PROBLEMS]
 PROBLEMS_PER_DAY = 1
