feat: Enhance Trello board and card operations
This commit enhances the functionality of Trello board and card operations.
The changes include:
- Updating the default color for the 'Know' label in the settings.ini file.
- Adding functionality to delete labels on Trello

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -12,7 +12,7 @@ END_DAY = 4
 WORKDAYS = 5
 
 [LABELS]
-DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:orange_light, Do not know:red_light, Know:green_light
+DEFAULT_COLORS = Easy:green, Medium:yellow, Somewhat know:orange_light, Do not know:red_light, Know:lime
 
 [PROBLEMS]
 PROBLEMS_PER_DAY = 1
